@startuml

package "Controller Layer" {
 class WorkerController
}

package "Service Layer" {
 class WorkerService
}

package "Persistence Layer" {
 interface WorkerRepository
}

package "Domain Layer" {

 class Worker {
  id : Long
  name : String
  phone : String
  shift : Shift
  active : boolean
 }

 class WorkOrder {
  id : Long
  description : String
  location : String
  priority : Priority
  status : Status
  createdAt : LocalDateTime
 }

}

WorkerController --> WorkerService
WorkerService --> WorkerRepository
WorkerRepository --> Worker

Worker "1" -- "0..*" WorkOrder : assigned

@enduml